chore: Java modernization – replace Paths.get() with Path.of()
Change-Id: I2d934264ed37203677de1a815ac1d052ba20b3cd